feat: Add themed icon and link settings
This commit introduces a themed icon for Android 13+ devices and enhances the settings screen by making the "Feedback" and "Privacy Policy" items functional.

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
     <color name="splash_background">#FF131313</color>
-    <color name="splash_icon">#FFE2E2E2</color>
+    <color name="splash_icon_color">#FFFFFF</color>
     <color name="like_color">#E04C4C</color>
     <color name="translucent_nav_icon_background">#33000000</color>
 </resources>
