--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="splash_background">#FFFFFF</color>
+    <color name="splash_icon_color">#000000</color>
     <color name="like_color">#E04C4C</color>
     <color name="translucent_nav_icon_background">#33000000</color>
     <color name="collect_green_70">#B32ECC71</color>
